started changes on tablet size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
     
     <!--PORTFOLIO-->
-	<section id="portfolio">
+	<section class="container-fluid" id="portfolio">
 		<div class="row-fluid">
     <h4>PORTFOLIO</h4>
             <img src="img/portfolio-1.png" alt="Marketing Page">
