--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
  
     <!--HOME-->
     <section class="container-fluid" id="profile">
-        <div class="row-fluid">
-			<img src="img/profilepic.png" class="profile-photo" alt="Profile Picture">
-            <p>Hi! I'm a front-end developer who loves responsive design and css. I recently
+        <img src="img/profilepic.png" class="profile-photo" alt="Profile Picture">
+        <p class="intro">Hi! I'm a front-end developer who loves responsive design and css. I recently
             finished a degree in front-end web development at Treehouse and am excited to
             put all my skills to use!</p>
-        </div>
     </section>
     
     <!--PORTFOLIO-->
@@ -81,6 +79,15 @@
 		<li><h4>Sarah Schlueter</h4></li>
         <li><a href="#nav"><h4>BACK TO TOP</h4></a></li>
 		</ul>
+    </footer>
+    
+    <footer class="site-footer-2">
+        <ul>
+            <li><h4>Sarah Schlueter</h4></li>
+            <li><a href="#nav"><h4>HOME</h4></a></li>
+            <li><a href="#portfolio"><h4>PORTFOLIO</h4></a></li>
+            <li><a href="#contact"><h4>CONTACT</h4></a></li>
+        </ul>
     </footer>
 </body>
 </html>
