--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 </div>
     	
-       <footer class="site-footer">
+    <footer class="site-footer">
         <ul>
 		<li><h4>Sarah Schlueter</h4></li>
         <li><a href="#nav"><h4>BACK TO TOP</h4></a></li>
@@ -82,8 +82,8 @@
     </footer>
     
     <footer class="site-footer-2">
-        <p>Sarah Schlueter</p>
-        <ul>
+          <ul>
+            <li><h4>Sarah Schlueter</h4></li>  
             <li><a href="#nav"><h4>HOME</h4></a></li>
             <li><a href="#portfolio"><h4>PORTFOLIO</h4></a></li>
             <li><a href="#contact"><h4>CONTACT</h4></a></li>
