convert flex footer to sticky footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-
+<div class="page-wrap">
     <!--HOME-->
     <section class="container-fluid" id="profile">
         <img src="img/profilepic.png" class="profile-photo intro" alt="Profile Picture">
@@ -76,17 +76,17 @@
             <p>Phone <strong>(310) 902-7300</strong></p>
             <p>Email <strong>sarahmarie73@gmail.com</strong></p>
 </div>
-
+</div>
     <footer class="site-footer">
         <ul>
-		<li><h4>Sarah Schlueter</h4></li>
+        <li><h4>Sarah Schlueter</h4></li>    
         <li><a href="#nav"><h4>BACK TO TOP</h4></a></li>
 		</ul>
     </footer>
 
     <footer class="site-footer-2">
-        <div id="name"><h4>Sarah Schlueter</h4></div>
           <ul>
+            <li><h4>Sarah Schlueter</h4></li>
             <li><a href="#nav"><h4>HOME</h4></a></li>
             <li><a href="#portfolio"><h4>PORTFOLIO</h4></a></li>
             <li><a href="#contact"><h4>CONTACT</h4></a></li>
