--- a/index.html
+++ b/index.html
@@ -77,20 +77,16 @@
             <p>Email <strong>sarahmarie73@gmail.com</strong></p>
 </div>
 </div>
-    <footer class="site-footer">
-        <ul>
-        <li><h4>Sarah Schlueter</h4></li>    
-        <li><a href="#nav"><h4>BACK TO TOP</h4></a></li>
-		</ul>
+    <footer class="site-footer clearfix">
+        <h4>Sarah Schlueter</h4>    
+        <a href="#nav" class="top"><h4>BACK TO TOP</h4></a>
     </footer>
 
     <footer class="site-footer-2">
-          <ul>
-            <li><h4>Sarah Schlueter</h4></li>
-            <li><a href="#nav"><h4>HOME</h4></a></li>
-            <li><a href="#portfolio"><h4>PORTFOLIO</h4></a></li>
-            <li><a href="#contact"><h4>CONTACT</h4></a></li>
-        </ul>
+            <h4>Sarah Schlueter</h4>
+            <a href="#contact"><h4>CONTACT</h4></a>
+            <a href="#portfolio"><h4>PORTFOLIO</h4></a>
+            <a href="#nav"><h4>HOME</h4></a>
     </footer>
 </body>
 </html>
