--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <p>Email <strong>sarahmarie73@gmail.com</strong></p>
 </div>
 </div>
-    <footer class="site-footer clearfix">
-        <h4>Sarah Schlueter</h4>    
-        <a href="#nav" class="top"><h4>BACK TO TOP</h4></a>
+    <footer class="site-footer">
+        <h4 class="myname">Sarah Schlueter</h4>    
+        <a class="navtotop" href="#nav"><h4>BACK TO TOP</h4></a>
     </footer>
 
     <footer class="site-footer-2">
