--- a/index.html
+++ b/index.html
@@ -78,15 +78,25 @@
 </div>
 </div>
     <footer class="site-footer">
-        <h4 class="myname">Sarah Schlueter</h4>    
+        <div class = "footer-container-block">
+        <h4 class="myname">Sarah Schlueter</h4> 
+        </div>
+        <div class = "footer-container-block-2">
         <a class="navtotop" href="#nav"><h4>BACK TO TOP</h4></a>
+    </div>
     </footer>
 
     <footer class="site-footer-2">
+        <div class = "footer-container-block">
             <h4>Sarah Schlueter</h4>
-            <a href="#contact"><h4>CONTACT</h4></a>
-            <a href="#portfolio"><h4>PORTFOLIO</h4></a>
-            <a href="#nav"><h4>HOME</h4></a>
+            </div>
+            <div class = "footer-container-block">
+            <ul>
+                <li><a href="#contact"><h4>CONTACT</h4></a></li>
+                <li><a href="#portfolio"><h4>PORTFOLIO</h4></a></li>
+                <li><a href="#"><h4>HOME</h4></a></li>
+            </ul>
+            </div>
     </footer>
 </body>
 </html>
